# cardaminal

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
.github/: CONTRIBUTING.md  Dockerfile
.github/chglog/: release.yml
.github/workflows/: release.yml  validate.yml
adrs/: 001-command-hierarchy.md  002-local-file-structure.md  003-chain-configuration.md  004-chain-data.md  005-wallet-data.md  006-private-key-storage.md  007-tx-building.md  008-tx-file-storage.md
docs/: next.config.js  package-lock.json  package.json  theme.config.jsx
docs/components/: hero.jsx
docs/pages/: _meta.json  chain.mdx  configuration.mdx  index.mdx  start.mdx
docs/pages/chain/: _meta.json  block.mdx  create.mdx  delete.mdx  dump.mdx  list.mdx  sync.mdx
docs/pages/wallet/: _meta.json  address.mdx  attach.mdx  balance.mdx  create.mdx  detach.mdx  info.mdx  list.mdx  select.mdx  update.mdx  utxos.mdx
examples/: keep_syncing.sh  simple_transfer.sh
src/: dirs.rs  errors.rs  main.rs  utils.rs
src/chain/: block.rs  create.rs  delete.rs  dump.rs  info.rs  list.rs  mod.rs  sync.rs  update.rs  upstream.rs  watch.rs
src/chain/config/: mod.rs
src/chain/sources/: mod.rs  n2n.rs
src/sources/: n2n.rs
src/transaction/: balance.rs  build.rs  common.rs  create.rs  delete.rs  edit.rs  export.rs  inspect.rs  list.rs  mod.rs  sign.rs  submit.rs
src/transaction/changeaddress/: mod.rs  set.rs
src/transaction/collateralinput/: add.rs  mod.rs
src/transaction/collateraloutput/: mod.rs  set.rs
src/transaction/config/: mod.rs
src/transaction/datum/: mod.rs
src/transaction/disclosedsigner/: add.rs  mod.rs  remove.rs
src/transaction/edit/: add_collateral_input.rs  add_datum.rs  add_disclosed_signer.rs  add_input.rs  add_mint.rs  add_output.rs  add_redeemer_mint.rs  add_redeemer_spend.rs  add_reference_input.rs  add_script.rs  add_signature.rs  clear_change_address.rs  clear_collateral_output.rs  clear_fee.rs  clear_signer_amount.rs  clear_ttl.rs  clear_valid_hereafter.rs  common.rs  mod.rs  remove_collateral_input.rs  remove_datum.rs  remove_disclosed_signer.rs  remove_input.rs  remove_mint.rs  remove_output.rs  remove_redeemer.rs  remove_redeemer_mint.rs  remove_redeemer_spend.rs  remove_reference_input.rs  remove_script.rs  remove_signature.rs  set_change_address.rs  set_collateral_output.rs  set_fee.rs  set_signer_amount.rs  set_ttl.rs  set_valid_hereafter.rs
src/transaction/fee/: mod.rs  set.rs
src/transaction/input/: add.rs  mod.rs
src/transaction/mint/: add.rs  mod.rs  remove.rs
src/transaction/model/: built.rs  mod.rs  serialise.rs  staging.rs
src/transaction/network/: clear.rs  mod.rs  set.rs
src/wallet/: address.rs  attach.rs  balance.rs  create.rs  detach.rs  history.rs  info.rs  list.rs  mod.rs  select.rs  update.rs  utxos.rs
src/wallet/dal/: mod.rs
(+33 files in other folders)
