[package]
name = "cardaminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
inquire = "0.6.2"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.37"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
pallas = "0.19.1"
hex = "0.4.3"
