[package]
name = "cardaminal"
version = "1.0.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pallas = "0.19.1"
# pallas = { path = "../pallas/pallas" }
pallas = { git = "https://github.com/txpipe/pallas.git", branch = "feat/rolldb" }

clap = { version = "4.4.3", features = ["derive", "env"] }
inquire = "0.6.2"
miette = { version = "5.10.0", features = ["fancy"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.37"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
indicatif = "0.17.7"
comfy-table = "7.0.1"
directories = "5.0.1"
toml = "0.8.1"
chrono = { version = "0.4.31", features = ["serde"] }
slug = "0.1.4"
hex = "0.4.3"
